refactor internal and ocr server code, as well as app config setting code; setup local running env with Docker

--- a/api-ocr/pom.xml
+++ b/api-ocr/pom.xml
@@ -16,8 +16,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
+            <groupId>com.openprice</groupId>
+            <artifactId>openprice-api-common</artifactId>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 
