--- a/rest-admin/pom.xml
+++ b/rest-admin/pom.xml
@@ -45,6 +45,11 @@
             <artifactId>openprice-parser-stores</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.openprice</groupId>
+            <artifactId>openprice-api-internal</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>com.openprice</groupId>
