--- a/server-internal-api/src/main/resources/config/application.yml
+++ b/server-internal-api/src/main/resources/config/application.yml
@@ -1,15 +1,12 @@
 server:
     port: 7900
 
-application:
-    email:
-        systemName: GroundTruth Inc.
-        systemEmail: no-reply@openprice.com
-        adminName: Open Price
-        adminEmail: admin@openprice.com
-
 spring:
     datasource:
+        url: jdbc:mysql://mysql:3306/openprice
+        username: openprice
+        password: openprice
+        driver-class-name: com.mysql.jdbc.Driver
         test-on-borrow: true
         validation-query: SELECT 1
     jpa:
@@ -18,31 +15,18 @@ spring:
         hibernate:
             ddl-auto: validate
 
----
-
-spring:
-    profiles: docker
-
-    datasource:
-        url: jdbc:mysql://mysql:3306/openprice
-        username: openprice
-        password: openprice
-        driver-class-name: com.mysql.jdbc.Driver
-
 application:
     email:
-      webServerUrl: http://104.154.88.206:8080
-    file:
-        virtual: false
-        imageRootFolder: /groundtruth/images
-
----
-
-spring:
-    profiles: ocr
-    
-application:
-    process:
-        serverPrefix: openprice-server-ocr-
-        numberOfServers: 1
-        serverPort: 7901
+        systemName: GroundTruth Inc.
+        systemEmail: no-reply@openprice.com
+        adminName: Open Price
+        adminEmail: admin@openprice.com
+        webServerUrl: http://104.154.88.206:8080
+    settings:
+        file:
+            virtual: false
+            imageRootFolder: /groundtruth/images
+        process:
+            serverPrefix: openprice-server-ocr-
+            numberOfServers: 2
+            serverPort: 7901
