--- a/api-internal/pom.xml
+++ b/api-internal/pom.xml
@@ -16,13 +16,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-configuration-processor</artifactId>
-            <optional>true</optional>
+            <groupId>com.openprice</groupId>
+            <artifactId>openprice-api-common</artifactId>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 </project>
