--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,10 @@
         <module>parser-core</module>
         <module>parser-stores</module>
 
+        <module>api-common</module>
+        <module>api-internal</module>
+        <module>api-ocr</module>
+        
         <module>domain-common</module>
         <module>domain-account-user</module>
         <module>domain-account-admin</module>
@@ -33,20 +37,17 @@
         <module>domain-store</module>
         <module>domain-shopping</module>
         <module>process</module>
+
         <module>rest-common</module>
+        <module>rest-internal</module>
+        <module>rest-ocr</module>
         <module>rest-user</module>
         <module>rest-admin</module>
 
         <module>server-common</module>
         <module>server-web-api</module>
         <module>server-admin-api</module>
-
-        <module>api-internal</module>
-        <module>rest-internal</module>
         <module>server-internal-api</module>
-
-        <module>api-ocr</module>
-        <module>rest-ocr</module>
         <module>server-ocr</module>
 
         <module>server-docs</module>
