--- a/server-ocr/src/main/resources/config/application.yml
+++ b/server-ocr/src/main/resources/config/application.yml
@@ -1,21 +1,23 @@
 server:
     port: 7901
 
----
-
 spring:
-    profiles: local
-application:
-    file:
-        virtual: false
-        imageRootFolder: /tmp/groundtruth/images/
+    datasource:
+        url: jdbc:mysql://mysql:3306/openprice
+        username: openprice
+        password: openprice
+        driver-class-name: com.mysql.jdbc.Driver
+        test-on-borrow: true
+        validation-query: SELECT 1
+    jpa:
+        database: MYSQL
+        show-sql: false
+        hibernate:
+            ddl-auto: validate
 
----
-
-spring:
-    profiles: docker
 application:
-    file:
-        virtual: false
-        imageRootFolder: /groundtruth/images/
+    settings:
+        file:
+            virtual: false
+            imageRootFolder: /groundtruth/images
     
