refactor internal api url

--- a/rest-common/pom.xml
+++ b/rest-common/pom.xml
@@ -25,6 +25,11 @@
             <artifactId>openprice-domain-common</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.openprice</groupId>
+            <artifactId>openprice-api-common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
         <!-- spring hateoas for restful api -->
         <dependency>
