refactor ocr process code

--- a/process/pom.xml
+++ b/process/pom.xml
@@ -32,6 +32,10 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+        	<groupId>com.hazelcast</groupId>
+        	<artifactId>hazelcast</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
