--- a/parser-stores/src/main/resources/config/RCSS/RCSS1/headerConfig.properties
+++ b/parser-stores/src/main/resources/config/RCSS/RCSS1/headerConfig.properties
@@ -12,7 +12,7 @@ ChainIDHeader=
 ChainHeader=RCSS,REAL CANADIAN,Superstore
 CouponHeader=Store Cpn,VENDOR COUPON
 DTFormat=month/day/year hour:minute
-DateHeader=
+DateHeader=DATE
 DateHeader2= REDEEM HERE FOR FREE GROCERIES**
 DepositHeader=DEPOSIT 1
 GstExample=12223-5922 RT0001
