add loggly integration

--- a/server-ocr/pom.xml
+++ b/server-ocr/pom.xml
@@ -43,6 +43,13 @@
             <artifactId>spring-boot-configuration-processor</artifactId>
         </dependency>
 
+        <!-- For Loggly Logback extension -->
+        <dependency>
+            <groupId>org.logback-extensions</groupId>
+            <artifactId>logback-ext-loggly</artifactId>
+            <version>0.1.2</version>
+        </dependency>
+
     </dependencies>
 
     <build>
