--- a/pom.xml
+++ b/pom.xml
@@ -169,6 +169,7 @@
             <properties>
                 <!-- log configuration -->
                 <logback.loglevel>DEBUG</logback.loglevel>
+                <logback.loggly.loglevel>DEBUG</logback.loggly.loglevel>
             </properties>
             <dependencies>
                 <dependency>
@@ -182,6 +183,7 @@
             <properties>
                 <!-- log configuration -->
                 <logback.loglevel>INFO</logback.loglevel>
+                <logback.loggly.loglevel>INFO</logback.loggly.loglevel>
             </properties>
             <dependencies>
                 <dependency>
