--- a/server-common/pom.xml
+++ b/server-common/pom.xml
@@ -51,6 +51,13 @@
             <artifactId>httpclient</artifactId>
         </dependency>
 
+        <!-- For Loggly Logback extension -->
+        <dependency>
+            <groupId>org.logback-extensions</groupId>
+            <artifactId>logback-ext-loggly</artifactId>
+            <version>0.1.2</version>
+        </dependency>
+
     </dependencies>
 
 </project>
