--- a/server-common/pom.xml
+++ b/server-common/pom.xml
@@ -11,8 +11,8 @@
     <artifactId>openprice-server-common</artifactId>
     <packaging>jar</packaging>
 
-    <name>REST API Server Common</name>
-    <description>OpenPrice REST API server common code for web-api and admin-api.</description>
+    <name>RESTful API Server Common</name>
+    <description>OpenPrice common code for other RESTful API Servers, such as web-api and admin-api.</description>
 
     <dependencies>
         <dependency>
