--- a/server-ocr/pom.xml
+++ b/server-ocr/pom.xml
@@ -11,11 +11,11 @@
     <artifactId>openprice-server-ocr</artifactId>
     <packaging>jar</packaging>
 
-    <name>OCR Process Server</name>
-    <description>OpenPrice OCR server code.</description>
+    <name>OCR RESTful API Server</name>
+    <description>OpenPrice RESTful API Server for OCR service.</description>
 
     <properties>
-        <start-class>com.openprice.ocr.OpenPriceOcrServerApplication</start-class>
+        <start-class>com.openprice.ocr.OcrServerApplication</start-class>
     </properties>
 
     <dependencies>
