--- a/server-web-api/src/main/resources/config/application.yml
+++ b/server-web-api/src/main/resources/config/application.yml
@@ -12,6 +12,9 @@ spring:
         hibernate:
             ddl-auto: validate
 
+multipart:
+    maxFileSize: 10Mb
+    
 application:
     settings:
         email:
