--- a/server-common/pom.xml
+++ b/server-common/pom.xml
@@ -55,7 +55,7 @@
         <dependency>
             <groupId>org.logback-extensions</groupId>
             <artifactId>logback-ext-loggly</artifactId>
-            <version>0.1.2</version>
+            <version>${logback-ext-loggly.version}</version>
         </dependency>
 
     </dependencies>
