--- a/domain-account-admin/pom.xml
+++ b/domain-account-admin/pom.xml
@@ -4,11 +4,11 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.openprice</groupId>
-        <artifactId>openprice-project</artifactId>
+        <artifactId>op-project</artifactId>
         <version>0.2.0</version>
     </parent>
 
-    <artifactId>openprice-domain-account-admin</artifactId>
+    <artifactId>op-domain-account-admin</artifactId>
     <packaging>jar</packaging>
 
     <name>Admin Account Domain Module</name>
@@ -17,7 +17,7 @@
     <dependencies>
         <dependency>
             <groupId>com.openprice</groupId>
-            <artifactId>openprice-domain-common</artifactId>
+            <artifactId>op-domain-common</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
