--- a/rest-ocr/pom.xml
+++ b/rest-ocr/pom.xml
@@ -4,11 +4,11 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.openprice</groupId>
-        <artifactId>openprice-project</artifactId>
+        <artifactId>op-project</artifactId>
         <version>0.2.0</version>
     </parent>
 
-    <artifactId>openprice-rest-ocr</artifactId>
+    <artifactId>op-rest-ocr</artifactId>
     <packaging>jar</packaging>
 
     <name>OCR Service Rest API Module</name>
@@ -17,12 +17,12 @@
     <dependencies>
         <dependency>
             <groupId>com.openprice</groupId>
-            <artifactId>openprice-api-ocr</artifactId>
+            <artifactId>op-api-ocr</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.openprice</groupId>
-            <artifactId>openprice-infrastructure</artifactId>
+            <artifactId>op-infrastructure</artifactId>
             <version>${project.version}</version>
         </dependency>
 
