--- a/api-common/pom.xml
+++ b/api-common/pom.xml
@@ -4,11 +4,11 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.openprice</groupId>
-        <artifactId>openprice-project</artifactId>
+        <artifactId>op-project</artifactId>
         <version>0.2.0</version>
     </parent>
 
-    <artifactId>openprice-api-common</artifactId>
+    <artifactId>op-api-common</artifactId>
     <packaging>jar</packaging>
 
     <name>Common API Module</name>
