--- a/domain-receipt/pom.xml
+++ b/domain-receipt/pom.xml
@@ -4,11 +4,11 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.openprice</groupId>
-        <artifactId>openprice-project</artifactId>
+        <artifactId>op-project</artifactId>
         <version>0.2.0</version>
     </parent>
 
-    <artifactId>openprice-domain-receipt</artifactId>
+    <artifactId>op-domain-receipt</artifactId>
     <packaging>jar</packaging>
 
     <name>Receipt Domain Module</name>
@@ -17,12 +17,12 @@
     <dependencies>
         <dependency>
             <groupId>com.openprice</groupId>
-            <artifactId>openprice-domain-account-user</artifactId>
+            <artifactId>op-domain-account-user</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.openprice</groupId>
-            <artifactId>openprice-parser-core</artifactId>
+            <artifactId>op-parser-core</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
