--- a/pom.xml
+++ b/pom.xml
@@ -10,13 +10,13 @@
     </parent>
 
     <groupId>com.openprice</groupId>
-    <artifactId>openprice-project</artifactId>
+    <artifactId>op-project</artifactId>
     <version>0.2.0</version>
     <packaging>pom</packaging>
 
     <name>Open Price Project</name>
     <url>https://theopenprice.com/</url>
-    <inceptionYear>2015-</inceptionYear>
+    <inceptionYear>2015-2016</inceptionYear>
 
     <modules>
         <module>infrastructure</module>
@@ -57,7 +57,7 @@
     <properties>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <docker.image.prefix>openprice</docker.image.prefix>
+        <docker.image.prefix>opgt</docker.image.prefix>
 
         <hibernate.version>5.0.3.Final</hibernate.version>
         <handy-uri-templates.version>2.1.0</handy-uri-templates.version>
