--- a/rest-common/pom.xml
+++ b/rest-common/pom.xml
@@ -4,11 +4,11 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.openprice</groupId>
-        <artifactId>openprice-project</artifactId>
+        <artifactId>op-project</artifactId>
         <version>0.2.0</version>
     </parent>
 
-    <artifactId>openprice-rest-common</artifactId>
+    <artifactId>op-rest-common</artifactId>
     <packaging>jar</packaging>
 
     <name>Rest API Common Code Module</name>
@@ -17,17 +17,17 @@
     <dependencies>
         <dependency>
             <groupId>com.openprice</groupId>
-            <artifactId>openprice-infrastructure</artifactId>
+            <artifactId>op-infrastructure</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.openprice</groupId>
-            <artifactId>openprice-domain-common</artifactId>
+            <artifactId>op-domain-common</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.openprice</groupId>
-            <artifactId>openprice-api-common</artifactId>
+            <artifactId>op-api-common</artifactId>
             <version>${project.version}</version>
         </dependency>
 
