--- a/rest-internal/pom.xml
+++ b/rest-internal/pom.xml
@@ -4,11 +4,11 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.openprice</groupId>
-        <artifactId>openprice-project</artifactId>
+        <artifactId>op-project</artifactId>
         <version>0.2.0</version>
     </parent>
 
-    <artifactId>openprice-rest-internal</artifactId>
+    <artifactId>op-rest-internal</artifactId>
     <packaging>jar</packaging>
 
     <name>Internal Rest Service Module</name>
@@ -17,24 +17,24 @@
     <dependencies>
         <dependency>
             <groupId>com.openprice</groupId>
-            <artifactId>openprice-process</artifactId>
+            <artifactId>op-process</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.openprice</groupId>
-            <artifactId>openprice-api-internal</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.openprice</groupId>
-            <artifactId>openprice-rest-common</artifactId>
+            <artifactId>op-api-internal</artifactId>
             <version>${project.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.openprice</groupId>
-            <artifactId>openprice-rest-common</artifactId>
+            <artifactId>op-rest-common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.openprice</groupId>
+            <artifactId>op-rest-common</artifactId>
             <version>${project.version}</version>
             <type>test-jar</type>
             <scope>test</scope>
