--- a/security/pom.xml
+++ b/security/pom.xml
@@ -4,11 +4,11 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.openprice</groupId>
-        <artifactId>openprice-project</artifactId>
+        <artifactId>op-project</artifactId>
         <version>0.2.0</version>
     </parent>
 
-    <artifactId>openprice-security</artifactId>
+    <artifactId>op-security</artifactId>
     <packaging>jar</packaging>
 
     <name>JWT Authentication</name>
