--- a/server-admin-api/src/main/resources/config/application.yml
+++ b/server-admin-api/src/main/resources/config/application.yml
@@ -20,7 +20,7 @@ application:
             adminName: Open Price
             adminEmail: admin@openprice.com
         internal:
-            serverHost: openprice-server-internal-api
+            serverHost: op-server-internal-api
             serverPort: 8080
         file:
             virtual: false
