--- a/server-internal-api/src/main/resources/config/application.yml
+++ b/server-internal-api/src/main/resources/config/application.yml
@@ -24,6 +24,7 @@ application:
             virtual: false
             imageRootFolder: /groundtruth/images
         process:
-            serverPrefix: openprice-server-ocr-
-            numberOfServers: 0
-            serverPort: 8080
+            cloudEngine: true
+            numberOfServers: 1
+            cloudApplicationId: JiwhizOCR
+            cloudPassword: a+4O1z0k9PbPWlXavy+42++g
