--- a/server-web-api/src/main/resources/config/application.yml
+++ b/server-web-api/src/main/resources/config/application.yml
@@ -24,7 +24,7 @@ application:
             adminEmail: admin@openprice.com
             webServerUrl: http://104.154.88.206:8080
         internal:
-            serverHost: openprice-server-internal-api
+            serverHost: op-server-internal-api
             serverPort: 8080
         file:
             virtual: false
