--- a/parser-core/src/main/resources/config/Generic/Generic1/headerConfig.properties
+++ b/parser-core/src/main/resources/config/Generic/Generic1/headerConfig.properties
@@ -1,24 +1,45 @@
-AccountHeader=Account,ACCOUNT NUMBER
-AddressHeader=Address
-ApprovedHeader=Approved
-AuthorHeader=AUTHOR. #, Auth#
-CardHeader=CARD,Member card number:,VF       MasterCard  
-CashierHeader=YOUR CASHIER TODAY WAS,Served by:
+AccountHeader=CARD # ************,CARD
+AddressHeader=RCSS
+ApprovedHeader=APPROVED
+AuthorHeader=REF #           AUTH #      RESP
+AuthorExample=05213Z
+BuyPriceStartColumn=63
+BuyPriceIsAdjusted=false
+CashierHeader=
+CardHeader=Member card number:
+Chain=RCSS
 ChainIDHeader=
+ChainHeader=RCSS,REAL CANADIAN,Superstore
 CouponHeader=Store Cpn,VENDOR COUPON
-DateHeader=DATE,Term      Tran   Store    Oper
-DepositHeader=+DEPOSIT,+Deposit,EHC
-GstAmountHeader=**** 5.0% GST,5% GST,TOTAL TAX,**** TAX
-GstNumberHeader=GST/HST#,GST#
-PhoneHeader=Phone:,Phone#
-PriceTail=c,C,GC,GO,R,r,G
-RecycleHeader=CRF/RECYCLING FEE
-RefHeader=REF #
-RegularPriceHeader=RegPrice
-SavingHeader=Card Savings,Savings,=> $. Sale price
-SloganHeader=It's Just Better
-StoreBranchHeader=STORE,Safeway
+DTFormat=month/day/year hour:minute
+DateHeader=DATE
+DateHeader2= REDEEM HERE FOR FREE GROCERIES**
+DepositHeader=DEPOSIT 1
+GstExample=12223-5922 RT0001
+GstAmountHeader=    G=GST 5% 
+GstNumberHeader=                       GST #
+MinHeadSpacesBeforeCategory=0
+PhoneExample=780-435-5132
+PhoneHeader=Phone#
+PriceTail=
+QuantityPriceFirst=true
+QuantityPriceExample=2 @ $3.28 lmt 4
+RecycleHeader=ECOLOGY FEE 
+RegularPriceHeader=
+RefHeader=
+RefExample=253001001002
+SavingHeader=
+SimilarityThresholdOfTwoStrings=0.65
+Slogan=Big on Fresh, Low on Price
+SloganHeader=Big on Fresh, Low on Price
+StoreIDHeader=STORE:
+SubstringOfUnitPriceLine= . kg @ $ . /kg
+SubstringOfQuantityPriceLine= $. lmt , $ . ea
 SubTotalHeader=SUBTOTAL
-ThankYouHeader=Thank you for shopping at Our Store
-TotalHeader=Total
-TotalSoldHeader=TOTAL NUMBER OF ITEMS SOLD =,NUMBER OF ITEMS 
+ThankYouHeader=Thank You, Come Again !
+TotalHeader=TOTAL
+TotalSoldHeader=NUMBER OF ITEMS
+UnitPriceStartColumn=33
+UnitPriceAppearsFirst=false
+WeightUnit=kg
+WidthLowerBound=40
