editing and seperating configuration files

--- a/parser-stores/src/main/resources/config/Safeway/Safeway1/headerConfig.properties
+++ b/parser-stores/src/main/resources/config/Safeway/Safeway1/headerConfig.properties
@@ -1,3 +1,4 @@
+#headers 
 AccountHeader=Account,ACCOUNT NUMBER
 AddressHeader=Address
 ApprovedHeader=Approved
@@ -11,7 +12,6 @@ DepositHeader=+DEPOSIT,+Deposit,EHC
 GstAmountHeader=**** 5.0% GST,5% GST,TOTAL TAX,**** TAX
 GstNumberHeader=GST/HST#,GST#
 PhoneHeader=Phone:,Phone#
-PriceTail=c,C,GC,GO,R,r,G
 RecycleHeader=CRF/RECYCLING FEE
 RefHeader=REF #
 RegularPriceHeader=RegPrice
