--- a/parser-stores/src/main/resources/config/Safeway/config.properties
+++ b/parser-stores/src/main/resources/config/Safeway/config.properties
@@ -1,4 +1,4 @@
-PriceTail=c,C,GC,GO,R,r,G
+#properties
 AuthorExample=05790Z
 BuyPriceStartColumn=63
 BuyPriceIsAdjusted=true
@@ -7,6 +7,7 @@ DTFormat=month/day/year hour:minute
 GstExample=817093735
 MinHeadSpacesBeforeCategory=8
 PhoneExample=780-435-5132
+PriceTail=c,C,GC,GO,R,r,G
 QuantityPriceFirst=true
 QuantityPriceExample=2 @ 1/ $0.29
 SimilarityThresholdOfTwoStrings=0.7
