--- a/server-internal-api/src/main/resources/config/application.yml
+++ b/server-internal-api/src/main/resources/config/application.yml
@@ -16,15 +16,16 @@ application:
     settings:
         email:
             systemName: GroundTruth Inc.
-            systemEmail: no-reply@openprice.com
+            systemEmail: no-reply@theopenprice.com
             adminName: Open Price
-            adminEmail: admin@openprice.com
+            adminEmail: yuan.ji@jiwhiz.com
             webServerUrl: http://104.154.88.206:8080
         file:
             virtual: false
             imageRootFolder: /groundtruth/images
         process:
             cloudEngineEnabled: true
-            numberOfServers: 3
+            numberOfServers: 1
+            waitSeconds: 0
             cloudApplicationId: JiwhizOCR
             cloudPassword: a+4O1z0k9PbPWlXavy+42++g
