use SimpleCategoryPredictor to set shopping list item category

--- a/domain-shopping/pom.xml
+++ b/domain-shopping/pom.xml
@@ -25,5 +25,11 @@
             <artifactId>op-domain-account-user</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.openprice</groupId>
+            <artifactId>op-parser-core</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        
     </dependencies>
 </project>
