--- a/rest-common/pom.xml
+++ b/rest-common/pom.xml
@@ -30,6 +30,11 @@
             <artifactId>op-api-common</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.openprice</groupId>
+            <artifactId>op-parser-core</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
         <!-- spring hateoas for restful api -->
         <dependency>
